--- a/day-3/styles.css
+++ b/day-3/styles.css
@@ -29,3 +29,21 @@ body{
     margin: 2px 20px;
     font-weight: 100;
 }
+
+.brand-name{
+    position: absolute;
+    top: 120px;
+    left: 40%;
+}
+
+.brand-name-img{
+    width: 300px;
+}
+
+.brand-slogan{
+    position: absolute;
+    top: 200px;
+    left: 300px;
+    font-size: 50px;
+    color: white;
+}
